--- a/TAO/orbsvcs/tests/Makefile
+++ b/TAO/orbsvcs/tests/Makefile
@@ -60,7 +60,14 @@ DIRS += Concurrency \
   Security \
   Miop \
   LoadBalancing \
-  Log 
+  Log \
+  Bug_1334_Regression \
+  Bug_1393_Regression \
+  Bug_1395_Regression \
+  Bug_1436_Regression \
+  Bug_1437_Regression \
+  Bug_1630_Regression \
+
 
 ifeq ($(rt_corba),1)
   ifeq ($(interceptors),1)
